# xrootd

./: xrootd.spec
.github/workflows/: CI.yml
debian/: control
src/: XrdPfc.cmake  XrdPlugins.cmake
src/XProtocol/: XProtocol.hh
src/Xrd/: XrdConfig.cc  XrdConfig.hh  XrdLinkXeq.cc
src/XrdCms/: XrdCmsCluster.cc  XrdCmsConfig.cc  XrdCmsNode.cc  XrdCmsProtocol.cc
src/XrdHttp/: XrdHttpProtocol.cc  XrdHttpProtocol.cc.orig  XrdHttpProtocol.hh  XrdHttpReq.cc
src/XrdNet/: XrdNetIF.cc
src/XrdOfs/: XrdOfs.cc
src/XrdOssArc/utils/: XrdOssArc_BkpUtils
src/XrdOuc/: XrdOucPrivateUtils.hh  XrdOucUtils.cc
src/XrdPfc/: XrdPfc.cc  XrdPfcPathParseTools.hh
src/XrdPss/: XrdPss.cc  XrdPss.hh
src/XrdSciTokens/: CMakeLists.txt  XrdSciTokensAccess.cc  XrdSciTokensAccess.hh
src/XrdThrottle/: CMakeLists.txt  XrdThrottle.hh  XrdThrottleFileSystemConfig.cc
src/XrdTls/: XrdTlsContext.cc  XrdTlsContext.hh
src/XrdXrootd/: XrdXrootdConfigMon.cc  XrdXrootdXeq.cc
tests/XRootD/: http.cfg  http.sh  test.sh
tests/scitokens/: XrdScitokensCreateToken.cc
